# SDrecall

./: .gitattributes  .gitignore  1_biserFetch.sh  1_build_regions.py  1_getTrimmedSD.py  2_preparation.py  2_trimCIGAR.py  3_annotateExtract.py  3_annotateExtractPID.py  3_maskedAlignPolyVar.py  4_buildFileMap.sh  4_buildSampleMap.sh  4_mergePVCF.py  4_preparation.sh  5_maskedAlignPolyVarCall.sh  6_makeIntrinsicVCF.sh  6_postProcessing.sh  7_postProcessing.sh  LICENCE  README.md  SDrecall  SDrecall.py  SDrecall.yml  SDrecall_per_sample.refsd.py  __init__.py  build_hierarchical_beds.py  build_regions_from_PC_clusters.py  build_sd.py  call_intrinsic_variants.py  convert_nodes_into_hierachical_beds.py  coverages.py  customRun.md  development_workspace.ipynb  extract_SD_pairs_from_bam_json.py  fc_nfc_pair.py  geneAnnotation.py  genome.py  graph.py  graph_build.py  graph_query.py  (+32 more)
.ipynb_checkpoints/: 3_annotateExtractPID-checkpoint.py  SDrecall_per_sample-checkpoint.py  build_sd-checkpoint.py  coverages-checkpoint.py  development_workspace-checkpoint.ipynb  multialign-checkpoint.py  prepare_recall_regions-checkpoint.py  read_filter-checkpoint.py  read_properties-checkpoint.py  realign_and_call-checkpoint.py  shell_utils-checkpoint.sh  test_regions-checkpoint.bed
benchmark_codes/: cal_prec_recall_vcf.py
benchmarks/: README.md  TEST_BAM_ACCESS.md  benchmark_variants.sh  compare_variants.sh  hg19.coding.pid.pad20.bed  hg38.coding.pid.pad20.bed  identify_allele_bias_missing_TP.py  prepare_GIAB_bam_file.sh  process_refSD_map.sh  showcase_GATK_DeepVariant.sh
doc/: customRun.md  genelist.txt  intrinsicVCF.md
env/: SDrecall.yml  SDrecall_general.yml
example/: HG002.CMRG.hg38.test.bam.bai  HG002.hg38.CMRG.deepvariant.vcf.gz.tbi  example_run.sh
fp_control/: __init__.py  bam_ncls.py  bilc.py  bk_algorithm.py  clique_identify.py  gce_algorithm.py  graph_build.py  identify_misaligned_haps.py  numba_operators.py  pairwise_read_inspection.py  pairwise_read_inspection.rs  phasing.py  realign_filter_per_cov.py  shell_cmds.py
preparation/: __init__.py  build_beds_and_masked_genomes.py  genome.py  graph_build.py  graph_query.py  graph_traversal.py  homoseq_region.py  inferred_depths.py  intrinsic_alignment.py  masked_genome.py  masked_realignment.py  pick_multialign_regions.py  sd_pairs.py  seq.py
preparation/.ipynb_checkpoints/: build_beds_and_masked_genomes-checkpoint.py  genome-checkpoint.py  graph_query-checkpoint.py  intrinsic_variants-checkpoint.py  pick_multialign_regions-checkpoint.py
preparation/archive/: extract_SD_pairs_from_bam_json.py  intrinsic_variants.py  pick_multialign_regions.py
realign_recall/: __init__.py  annotate_HP_tag_to_vars.py  cal_edge_NM_values.py  prepare_masked_align_region.py  read_extraction.py  realign_per_RG.py  slice_bam_by_cov.py  stat_realign_group_regions.py
rust_modules/: Cargo.toml
rust_modules/build_phasing_graph/: Cargo.toml  README.md  build.sh  pyproject.toml
rust_modules/build_phasing_graph/src/: bam_reading.rs  graph_builder.rs  haplotype_determination.rs  lib.rs  python_bindings.rs  structs.rs
rust_modules/read_extraction/: Cargo.toml  pyproject.toml
rust_modules/read_extraction/src/: lib.rs
setup/: environment.yml  svsd.def
src/: Makefile  Untitled Diagram.drawio  __init__.py  annotate_from_ref.py  buildMaskedGenome.sh  checkBAM.sh  compare_with_intrinsic_vcf.py  concat_variants_with_priority.py  const.py  convert_vcf_to_diploidy.py  depth.py  errorHandling.sh  extractXA.sh  fileValidator.sh  fqValidator.cpp  geneAnnotation.py  insert_size.py  log.py  maskGenome.py  merge_variants_with_priority.py  miscellaneous.sh  ref2fastq.sh  select_bam_by_regions.sh  suppress_warning.py  trim_cigar.py  utils.py
src/.ipynb_checkpoints/: log-checkpoint.py  utils-checkpoint.py
src/1_fetchBiser/: biserTest.sh
src/2_cigarProcessing/: trimCIGAR.py  utils.py
src/homologous_regions/: ACTB_related_homo_regions.bed  ADA2_related_homo_regions.bed  AK2_related_homo_regions.bed  AP1S3_related_homo_regions.bed  AP3D1_related_homo_regions.bed  ATM_related_homo_regions.bed  BLM_related_homo_regions.bed  BLNK_related_homo_regions.bed  BRCA1_related_homo_regions.bed  C2_related_homo_regions.bed  C4A_C4B_related_homo_regions.bed  (+72 more)
test/: a.out  env.cpp
xingtian_src/: GATK4.1_based_NGS_preprocessing_script.sh  common_bash_utils.sh  realign_masked_and_HC_multiploidy.sh
yxt_src/: SDrecall_per_sample.refsd.py  extract_SD_pairs_from_bam_json.py  merge_vcf_with_priority.py  pick_multialign_region.py  prepare_PC_per_bam_refsd.py  python_utils.py
(+6 files in other folders)
