[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "realign_recall"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = []

[tool.maturin]
# Point to the Rust workspace; install each crate by selecting its manifest with
#   maturin develop --manifest-path rust_modules/build_phasing_graph/Cargo.toml
#   maturin develop --manifest-path rust_modules/read_extraction/Cargo.toml
manifest-path = "rust_modules/Cargo.toml"
python-source = "." 