[workspace]
members = ["read_extraction", "build_phasing_graph"]
resolver = "2"

# Optimize for release builds (important for Python modules)
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[workspace.dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }
numpy = "0.21"
rust-htslib = "0.47"
rayon = "1.8"
thiserror = "1.0"
anyhow = "1.0" 