[package]
name = "build_phasing_graph"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-htslib = "0.40"
statrs = "0.16"
polars = { version = "0.35", features = ["lazy", "strings", "temporal"] }
tokio = { version = "1.0", features = ["process", "rt"] }
ahash = "0.8"  # Faster HashMap
rustc-hash = "1.1"  # Even faster for integer keys
petgraph = "0.6"  # Graph library - equivalent to graph-tool
log = "0.4"       # For logging
