[package]
name = "build_phasing_graph"
version = "0.1.0"
edition = "2021"

# Note: Release profile optimization is set at workspace level

[lib]
name = "build_phasing_graph"
crate-type = ["cdylib"]

[dependencies]
# Python integration - core requirements
pyo3 = { workspace = true }
numpy = { workspace = true, features = ["nalgebra"] }

# BAM/SAM file handling
rust-htslib = "0.47.0"

# Data structures and algorithms
ahash = "0.8"           # Fast HashMap implementation
rustc-hash = "1.1"      # Fast HashMap for integer keys  
petgraph = "0.6"        # Graph data structures

# Numerical computing
ndarray = { version = "0.15", features = ["blas"] }
half = { version = "2.6", features = ["num-traits", "bytemuck", "serde"] }
statrs = "0.16"         # Statistical functions
order-stat = "0.1"      # Fast O(n) median calculation

# Data processing and I/O
polars = { version = "0.35", features = ["lazy", "strings", "temporal"] }
tempfile = "3.8"        # Temporary file handling

# Logging
log = "0.4"             # Logging framework
pyo3-log = "0.10"       # Python logging integration

# Optional: Parallel processing (commented out to reduce compilation time)
# rayon = { workspace = true }

# Optional: Async runtime (only if needed for async operations)
# tokio = { version = "1.0", features = ["process", "rt"] }
